--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@clerk/nextjs": "^6.12.5",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "6.5.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -54,7 +54,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "prisma": "^6.5.0",
+    "prisma": "6.5.0",
     "react-email": "^4.0.2",
     "tailwindcss": "^4"
   },
