Fix: Move prisma to dependencies for production install

--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "prisma": "6.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "prisma": "6.5.0",
     "react-email": "^4.0.2",
     "tailwindcss": "^4"
   },
