--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.2",
-    "prisma": "6.5.0"
+    "prisma": "6.5.0",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "react-email": "^4.0.2",
-    "tailwindcss": "^4"
+    "react-email": "^4.0.2"
   },
   "overrides": {
     "next": "^15.2.4",
