--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "6.5.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -26,6 +27,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "^0.0.13",
+    "@tailwindcss/postcss": "^4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -35,6 +37,7 @@
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
+    "prisma": "6.5.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -44,12 +47,10 @@
     "resend": "^4.2.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2",
-    "prisma": "6.5.0",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
