--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
@@ -38,6 +39,7 @@
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "prisma": "6.5.0",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -49,6 +51,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
